<resources>
    <string name="app_name">MyAgenda</string>
    <string name="action_settings">Settings</string>

    <!--Strings for item types-->
    <string name="item_type_all">All</string>
    <string name="item_type_exam">Exam</string>
    <string name="item_type_project">Project</string>
    <string name="item_type_quiz">Quiz</string>
    <string name="item_type_homework">Homework</string>
    <string name="item_type_paper">Paper</string>
    <string name="item_type_exercise">Exercise</string>

    <!--Strings for dialog buttons-->
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="SAVE">Save</string>
    <string name="CANCEL">Cancel</string>

    <!--Text for creating/editing item dialog-->
    <string name="item_name">Item Name</string>
    <string name="item_date">Due Date</string>
    <string name="item_date_picker">Pick Date</string>
    <string name="date_time_format">MM/dd/yyyy \'at\' hh:mm a</string>
    <string name="new_item_title">Add New Agenda Item</string>
    <string name="new_item_class">Class of Agenda Item:</string>
    <string name="new_item_type">Type of Agenda Item:</string>
    <string name="new_item_pick_date">Set Date</string>
    <string name="new_item_pick_time">Set Time</string>
    <string name="new_item_delete">DELETE ITEM</string>
    <string name="new_item_confirm_delete_message">Are you sure you want to delete this item?</string>

    <!--Text for adding new item types-->
    <string name="add_item_type">Add Item Type</string>
    <string name="new_item_type_name">Enter the name of this new item type:</string>
    <string name="new_item_name_hint">Exam</string>

    <!--PREFERENCE CATEGORIES-->
    <string name="pref_category_title_notifications">Notifications</string>
    <string name="pref_category_title_delete">Deletion</string>
    <string name="pref_category_title_classes">Classes</string>
    <string name="pref_category_title_item_types">Item Types</string>

    <!--PREFERENCE KEYS-->
    <string name="pref_key_one_hour_notify">pref_key_one_hour_notify</string>
    <string name="pref_key_one_day_notify">pref_key_one_day_notify</string>
    <string name="pref_key_two_days_notify">pref_key_two_days_notify</string>
    <string name="pref_key_delete_after_due">pref_key_delete_after_due</string>
    <string name="pref_key_delete_all">pref_key_delete_all</string>
    <string name="pref_key_classes">pref_key_classes</string>
    <string name="pref_key_item_types">pref_key_item_types</string>
    <string name="pref_key_item_names_count">pref_key_item_names_count</string>
    <string name="pref_key_item_names_prefix">pref_key_item_names_prefix_</string>

    <!--PREFERENCE TITLES-->
    <string name="pref_title_one_hour_notify">1 Hour Notification</string>
    <string name="pref_title_one_day_notify">1 Day Notification</string>
    <string name="pref_title_two_days_notify">2 Days Notification</string>
    <string name="pref_title_delete_after_due">Delete After Due</string>
    <string name="pref_title_delete_all">Delete All</string>
    <string name="pref_title_classes">Classes</string>
    <string name="pref_title_item_types">Agenda Item Types</string>

    <!--PREFERENCE SUMMARIES-->
    <string name="pref_summary_one_hour_notify">Send a notification 1 hour before the due time.</string>
    <string name="pref_summary_one_day_notify">Send a notification 1 day before the due date.</string>
    <string name="pref_summary_two_days_notify">Send a notification 2 days before the due date.</string>
    <string name="pref_summary_delete_after_due">Delete items after their due date.</string>
    <string name="pref_summary_delete_all">Delete ALL agenda items. This process is not reversible. After all items are delete, this switch will be turned back off.</string>
    <string name="pref_summary_classes">Please enter your classes separated by a comma.</string>
    <string name="pref_summary_item_types">These are the types of items you can add in your agenda. Eg. Exams, Quizzes, etc.</string>

    <!--PREFERENCE DEFAULT VALUES/HINTS-->
    <string name="pref_hint_classes">Level Design, DSA2, Public Relations, Public Speaking, History of Baseball, Foundations of Mobile</string>
</resources>
